tests/snapshots/options__opt_border_default@001.snap
---
source: tests/options.rs
description: "input: items [\"a\", \"b\", \"c\", \"ac\"]\noptions: -q a --border"
---
"┌──────────────────────────────────────────────────────────────────────────────┐"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│  ac                                                                          │"
"│> a                                                                           │"
"┌  2/4──────────────────────────────────────────────────────────────────────0/0┐"
"│> a                                                                           │"
"└──────────────────────────────────────────────────────────────────────────────┘"
cursor: (23, 5)
