tests/snapshots/options__opt_border_double@001.snap
---
source: tests/options.rs
description: "input: items [\"a\", \"b\", \"c\", \"ac\"]\noptions: -q a --border double"
---
"╔══════════════════════════════════════════════════════════════════════════════╗"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"║                                                                              ║"
"║  ac                                                                          ║"
"║> a                                                                           ║"
"╔  2/4══════════════════════════════════════════════════════════════════════0/0╗"
"║> a                                                                           ║"
"╚══════════════════════════════════════════════════════════════════════════════╝"
cursor: (23, 5)
