tests/snapshots/options__opt_border_light_double_dashed.snap
---
source: tests/options.rs
expression: buf + & cursor_pos
---
"┌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┐"
"╎                                                                              ╎"
"╎                                                                              ╎"
"╎                                                                              ╎"
"╎                                                                              ╎"
"╎                                                                              ╎"
"╎                                                                              ╎"
"╎                                                                              ╎"
"╎                                                                              ╎"
"╎                                                                              ╎"
"╎                                                                              ╎"
"╎                                                                              ╎"
"╎                                                                              ╎"
"╎                                                                              ╎"
"╎                                                                              ╎"
"╎                                                                              ╎"
"╎                                                                              ╎"
"╎                                                                              ╎"
"╎  ac                                                                          ╎"
"╎> a                                                                           ╎"
"└╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┘"
"┌  2/4╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌0/0┐"
"╎> a                                                                           ╎"
"└╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┘"
cursor: (23, 5)
